--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -96,7 +96,7 @@ override-redirect = true
 ;; ;-   module position  -; ;;
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
-modules-left = time i3 mpd
+modules-left = time i3 mpd mpris
 modules-center = cava
 modules-right = wlan memory volume date battery
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
@@ -159,7 +159,16 @@ content-background = ${color.bg5}
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;; ;-       modules      -; ;;
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-
+;ws-icon-0 = 1;%{F#c2f0fc}1
+;ws-icon-1 = 2;%{F#fabea7}2
+;ws-icon-2 = 3;%{F#88e1f2}3
+;ws-icon-3 = 4;%{F#e36387}4
+;ws-icon-4 = 5;%{F#cceabb}5
+;ws-icon-5 = 6;%{F#c2f0fc}6
+;ws-icon-6 = 7;%{F#fabea7}7
+;ws-icon-7 = 8;%{F#88e1f2}8
+;ws-icon-8 = 9;%{F#e36387}9
+;ws-icon-9 = 10;%{F#cceabb}10
 
 [module/i3]
 type = internal/i3
@@ -225,10 +234,37 @@ format-disconnected-padding = 1
 tail = true
 ;label-connected = %essid% %downspeed%
 ;label-connected-foreground = ${color.txt}
-label-connected = 直 %essid% %downspeed%
+#label-connected = 直 %essid% %downspeed%
+label-connected =   %essid%  %downspeed% 
 label-disconnected = 睊
 ;ramp-signal-0 = 直
 ;ramp-signal-foreground = ${color.txt}
+
+[module/eth]
+type = internal/network
+interface = enp1s0
+interval = 0.5
+ 
+format-connected-underline = #0088CC
+label-connected =  [ :   %upspeed% | :   %downspeed% ]
+#label-connected-foreground = #2aa198
+ 
+;format-disconnected-underline = ${self.format-connected-underline}
+;label-disconnected = NET %ifname% disconnected
+;label-disconnected-foreground = NET ${colors.foreground-alt}
+ 
+;Required if <bar-progress> is used
+bar-progress-width = 5
+bar-progress-format = %{+u}%{+o}%fill%%{-u}%{-o}%indicator%%{+u}%{+o}%empty%%{-u}%{-o}
+bar-progress-indicator = |
+bar-progress-indicator-foreground = ${BAR.foreground}
+bar-progress-indicator-font = 3
+bar-progress-fill = █
+bar-progress-fill-foreground = #5a5
+bar-progress-fill-font = 3
+bar-progress-empty = █
+bar-progress-empty-foreground = #555
+bar-progress-empty-font = 3
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;; ;-      wlan end      -; ;;
@@ -330,6 +366,14 @@ animation-charging-foreground = ${color.txt}
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;; ;-        timer       -; ;;
+[module/mpris]
+type = custom/script
+exec = /home/stanoo/.local/bin/mpris.py -f '{icon} {artist} - {title}'
+tail = true
+click-left = /home/stanoo/.local/bin/mpris.py previous &
+click-right = /home/stanoo/.local/bin/mpris.py next &
+click-middle = /home/stanoo/.local/bin/mpris.py player-pause &
+
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 [module/cava]
 type = custom/script
@@ -337,6 +381,11 @@ type = custom/script
 exec-if = pgrep -x cava
 exec = python /home/stanoo/.local/bin/cava.py -colors "#FFFFFF" "#FF0000"
 tail = true
+
+[module/info]
+type = custom/script
+exec = /home/stanoo/.local/bin/poly_info.py
+interval = 10
 
 [module/timer]
 
