--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -12,7 +12,7 @@ bg2 = #7B68EE
 bg3 = #ffc1c6
 bg4 = #AF4844
 bg5 = #0b1117
-bg6 = #51b9f5
+bg6 = #362d58
 alpha = #00000000
 warn = #ED1A2A
 green = #359B64
@@ -40,7 +40,7 @@ txt2 = #000000
 width = 97%
 height = 18.5
 offset-x = 1.5%
-offset-y = 1.5%
+offset-y = 0.5%
 bottom = false
 fixed-center = true
 line-size = 5
@@ -96,9 +96,9 @@ override-redirect = true
 ;; ;-   module position  -; ;;
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
-modules-left = time i3 mpd mpris
+modules-left = time arrow7 i3 mpd arrow8
 modules-center = cava
-modules-right = wlan memory volume date battery
+modules-right =arrow4 wlan eth arrow6 volume arrow5 date arrow9 battery
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;; ;- module position end-; ;;
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
@@ -108,113 +108,265 @@ modules-right = wlan memory volume date battery
 ;; ;-       rounded      -; ;;
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
-[module/elipse]
+[module/arrow1]
 type = custom/text
-content = "%{T5}%{T-}"
+content = "%{T4} %{T-}"
+content-font = 2
+content-foreground = #bc5068
+content-background = #1a1c1e
+
+[module/arrow2]
+type = custom/text
+content = "%{T4} %{T-}"
+content-font = 2
+content-foreground = #bc5068
+content-background = #bc5068
+
+[module/arrow3]
+type = custom/text
+content = "%{T4} %{T-}"
 content-font = 2
 content-foreground = #362d58
-content-background = ${color.bg4}
+content-background = #bc5068
 
-
-[module/rounded-right-colored]
+[module/arrow4]
 type = custom/text
-content = %{T5}%{T-}
-content-foreground = ${color.bg2}
-content-background = ${color.alpha}
-
-
-[module/rounded-right-colored-two]
-type = custom/text
-content = %{T5}%{T-}
-content-foreground = ${color.bg1}
-content-background = ${color.bg2}
-
-[module/rounded-left-colored]
-type = custom/text
-content = %{T5}%{T-}
-content-foreground = ${color.bg5}
-content-background = ${color.bg4}
-
-[module/rounded-left]
-type = custom/text
-content = %{T5}%{T-}
-content-foreground = ${color.col}
-content-background = ${color.bg4}
-
-[module/rounded-left-colored-two]
-type = custom/text
-content = %{T5}%{T-}
+content = "%{T4} %{T-}"
+content-font = 4
 content-foreground = ${color.bg4}
-content-background = ${color.alpha}
+;content-background = #362d58
 
-[module/rounded-left-colored-three]
+[module/arrow5]
 type = custom/text
-content = %{T5}%{T-}
-content-foreground = ${color.bg1}
-content-background = ${color.bg5}
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-;; ;-     rounded end    -; ;;
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+content = "%{T4} %{T-}"
+content-font = 4
+content-foreground = ${color.bg5}
+;content-background = #362d58
+
+[module/arrow6]
+type = custom/text
+content = "%{T4} %{T-}"
+content-font = 2
+content-foreground = ${color.bg6}
+;content-background = #362d58
+
+[module/arrow9]
+type = custom/text
+content = "%{T4} %{T-}"
+content-font = 2
+content-foreground = ${color.green}
+;content-background = #362d58
+
+[module/arrow7]
+type= custom/text
+content = "%{T4} %{T-}"
+content-font = 2
+content-foreground = #bc5068
+content-background = #362d58
+
+[module/arrowblank]
+type= custom/text
+content = "%{T4} %{T-}"
+content-font = 2
+content-foreground = #bc5068
+content-background = #bc5068
+
+[module/arrow8]
+type = custom/text
+content = "%{T4}%{T-}"
+content-font = 2
+content-foreground = ${color.bg2}
+;content-background = #1a1c1e
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;; ;-       modules      -; ;;
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-;ws-icon-0 = 1;%{F#c2f0fc}1
-;ws-icon-1 = 2;%{F#fabea7}2
-;ws-icon-2 = 3;%{F#88e1f2}3
-;ws-icon-3 = 4;%{F#e36387}4
-;ws-icon-4 = 5;%{F#cceabb}5
-;ws-icon-5 = 6;%{F#c2f0fc}6
-;ws-icon-6 = 7;%{F#fabea7}7
-;ws-icon-7 = 8;%{F#88e1f2}8
-;ws-icon-8 = 9;%{F#e36387}9
-;ws-icon-9 = 10;%{F#cceabb}10
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;[module/workspaces]
+
+[module/workspaces]
+type = internal/xworkspaces
+
+; Only show workspaces defined on the same output as the bar
+;
+; Useful if you want to show monitor specific workspaces
+; on different bars
+;
+; Default: false
+pin-workspaces = true
+
+; Create click handler used to focus desktop
+; Default: true
+enable-click = true
+
+; Create scroll handlers used to cycle desktops
+; Default: true
+enable-scroll = true
+
+; icon-[0-9]+ = <desktop-name>;<icon>
+; NOTE: The desktop name needs to match the name configured by the WM
+; You can get a list of the defined desktops using:
+; $ xprop -root _NET_DESKTOP_NAMES
+icon-0 = 1;
+icon-1 = 2;
+icon-2 = 3;
+icon-3 = 4;
+icon-4 = 5;
+icon-default = 
+
+
+; Available tags:
+;   <label-monitor>
+;   <label-state> - gets replaced with <label-(active|urgent|occupied|empty)>
+; Default: <label-state>
+format = <label-state>
+
+; Available tokens:
+;   %name%
+; Default: %name%
+label-monitor = %name%
+
+; Available tokens:
+;   %name%
+;   %icon%
+;   %index%
+; Default: %icon%  %name%
+label-active = 
+label-active-foreground = ${color.foreground-alt}
+
+; Available tokens:
+;   %name%
+;   %icon%
+;   %index%
+; Default: %icon%  %name%
+label-occupied = 
+label-occupied-foreground = ${color.foreground-alt}
+
+; Available tokens:
+;   %name%
+;   %icon%
+;   %index%
+; Default: %icon%  %name%
+label-urgent = 
+label-urgent-foreground = ${color.shade2}
+
+; Available tokens:
+;   %name%
+;   %icon%
+;   %index%
+; Default: %icon%  %name%
+label-empty = 
+label-empty-foreground = ${color.foreground-alt}
+
+label-active-padding = 1
+label-urgent-padding = 1
+label-occupied-padding = 1
+label-empty-padding = 1
+
+
+;[module/i3]
+;type = internal/i3
+;format = <label-state> <label-mode>
+;pin-workspaces = false
+;strip-wsnumbers = true
+;index-sort = true
+;enable-click = true
+;enable-scroll = false
+;wrapping-scroll = false
+;reverse-scroll = false
+;fuzzy-match = true
+;
+ws-icon-0 = 1;%{F#c2f0fc}1
+ws-icon-1 = 2;%{F#fabea7}2
+ws-icon-2 = 3;%{F#88e1f2}3
+ws-icon-3 = 4;%{F#e36387}4
+ws-icon-4 = 5;%{F#cceabb}5
+ws-icon-5 = 6;%{F#c2f0fc}6
+ws-icon-6 = 7;%{F#fabea7}7
+ws-icon-7 = 8;%{F#88e1f2}8
+ws-icon-8 = 9;%{F#e36387}9
+ws-icon-9 = 10;%{F#cceabb}10
+;
+;
+;;ws-icon-default = " "
+;;ws-icon-0 = " "
+;;ws-icon-1 = " "
+;;ws-icon-2 = " "
+;;ws-icon-3 = "  "
+;;ws-icon-4 = "  "
+;;ws-icon-5 = "  "
+;;ws-icon-6 = "  "
+;;ws-icon-7 = "  "
+;;ws-icon-8 = "  "
+;;ws-icon-9 = "  "
+;
+;;format = <label-state>
+;label-focused-background = ${color.bg1}
+;label-mode-background = ${color.bg1}
+;label-focused = "  "
+;label-focused-foreground = ${color.acolor}
+;label-focused-padding = 1
+;
+;label-unfocused = " "
+;label-unfocused-background = ${color.bg1}
+;label-unfocused-foreground = ${color.fg}
+;label-unfocused-padding = ${self.label-focused-padding}
+;
+;label-visible =" "
+;label-visible-background = ${color.bg1}
+;label-visible-foreground = ${color.acolor}
+;label-visible-padding = ${self.label-focused-padding}
+;
+;label-urgent = ${self.label-focused}
+;label-urgent-background = ${color.bg1}
+;label-urgent-foreground = ${color.warn}
+;label-urgent-padding = ${self.label-focused-padding}
 
 [module/i3]
 type = internal/i3
 format = <label-state> <label-mode>
-pin-workspaces = false
-strip-wsnumbers = true
 index-sort = true
-enable-click = true
-enable-scroll = false
 wrapping-scroll = false
-reverse-scroll = false
-fuzzy-match = true
 
-ws-icon-default = " "
-ws-icon-0 = " "
-ws-icon-1 = " "
-ws-icon-2 = " "
-ws-icon-3 = "  "
-ws-icon-4 = "  "
-ws-icon-5 = "  "
-ws-icon-6 = "  "
-ws-icon-7 = "  "
-ws-icon-8 = "  "
-ws-icon-9 = "  "
+; Only show workspaces on the same output as the bar
+;pin-workspaces = true
 
-;format = <label-state>
-label-focused-background = ${color.bg1}
-label-mode-background = ${color.bg1}
-label-focused = "  "
-label-focused-foreground = ${color.acolor}
-label-focused-padding = 1
+ws-icon-0 = 1;%{F#c2f0fc}1
+ws-icon-1 = 2;%{F#fabea7}2
+ws-icon-2 = 3;%{F#88e1f2}3
+ws-icon-3 = 4;%{F#e36387}4
+ws-icon-4 = 5;%{F#cceabb}5
+ws-icon-5 = 6;%{F#c2f0fc}6
+ws-icon-6 = 7;%{F#fabea7}7
+ws-icon-7 = 8;%{F#88e1f2}8
+ws-icon-8 = 9;%{F#e36387}9
 
-label-unfocused = " "
-label-unfocused-background = ${color.bg1}
-label-unfocused-foreground = ${color.fg}
-label-unfocused-padding = ${self.label-focused-padding}
+label-mode-padding = 2
+;label-mode-foreground = ${color.bg1}
+label-mode-background = #bc5068
 
-label-visible =" "
-label-visible-background = ${color.bg1}
-label-visible-foreground = ${color.acolor}
-label-visible-padding = ${self.label-focused-padding}
+; focused = Active workspace on focused monitor
+label-focused = %index%
+label-focused-background = #824b68
+label-focused-underline = #757da9
+label-focused-padding = 2
 
-label-urgent = ${self.label-focused}
-label-urgent-background = ${color.bg1}
-label-urgent-foreground = ${color.warn}
-label-urgent-padding = ${self.label-focused-padding}
+; unfocused = Inactive workspace on any monitor
+label-unfocused = %index%
+label-unfocused-padding = 2
+label-unfocused-background = #bc5068
+
+; visible = Active workspace on unfocused monitor
+label-visible = %index%
+label-visible-background = #bc5068
+label-visible-padding = 0
+
+; urgent = Workspace with urgency hint set
+label-urgent = %index%
+label-urgent-background = #bc5068
+label-urgent-padding = 2
+
+; Separator in between workspaces
+; label-separator = |
+
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;; ;-        wlan        -; ;;
@@ -245,26 +397,7 @@ type = internal/network
 interface = enp1s0
 interval = 0.5
  
-format-connected-underline = #0088CC
-label-connected =  [ :   %upspeed% | :   %downspeed% ]
-#label-connected-foreground = #2aa198
- 
-;format-disconnected-underline = ${self.format-connected-underline}
-;label-disconnected = NET %ifname% disconnected
-;label-disconnected-foreground = NET ${colors.foreground-alt}
- 
-;Required if <bar-progress> is used
-bar-progress-width = 5
-bar-progress-format = %{+u}%{+o}%fill%%{-u}%{-o}%indicator%%{+u}%{+o}%empty%%{-u}%{-o}
-bar-progress-indicator = |
-bar-progress-indicator-foreground = ${BAR.foreground}
-bar-progress-indicator-font = 3
-bar-progress-fill = █
-bar-progress-fill-foreground = #5a5
-bar-progress-fill-font = 3
-bar-progress-empty = █
-bar-progress-empty-foreground = #555
-bar-progress-empty-font = 3
+ label-connected="   :%downspeed% "
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;; ;-      wlan end      -; ;;
@@ -287,7 +420,7 @@ type = internal/pulseaudio
 sink = alsa_output.pci-0000_00_1f.3.analog-stereo
 format-volume = <ramp-volume> <label-volume>
 format-volume-padding = 2
-format-volume-background = ${color.bg4}
+format-volume-background = ${color.bg6}
 
 label-volume = %percentage%%
 label-volume-foreground = ${color.txt}
